# artifact-k75eey

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android-build.yml  backend-build.yml  backend-deploy.yml  code-quality.yml  integration-tests.yml  ios-build.yml  mobile-deploy.yml  security-scan.yml  web-build.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/monitoring/: README.md
infrastructure/scripts/: apply-terraform.sh  backup-databases.sh  destroy-terraform.sh  init-terraform.sh  rotate-secrets.sh  setup-alerts.sh  setup-logging.sh  setup-monitoring.sh
src/backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
src/backend/api_gateway/: __init__.py  config.py  main.py
src/backend/api_gateway/middleware/: __init__.py  auth.py  cors.py  logging.py
src/backend/api_gateway/routes/: __init__.py  artwork.py  graph.py  search.py  user.py
src/backend/api_gateway/schemas/: __init__.py  artwork.py  graph.py  user.py
src/backend/auth_service/: __init__.py  config.py  main.py
src/backend/auth_service/models/: __init__.py  user.py
src/backend/auth_service/services/: __init__.py  jwt.py  oauth.py  password.py
src/backend/data_processor/: __init__.py  config.py  main.py
src/backend/data_processor/services/: __init__.py  getty.py  google_arts.py  wikidata.py
src/backend/data_processor/utils/: __init__.py  image.py  metadata.py
src/backend/graph_service/: __init__.py  config.py  main.py
src/backend/graph_service/models/: __init__.py  artwork.py  node.py  relationship.py
src/backend/graph_service/services/: __init__.py  graph_analyzer.py  graph_generator.py  neo4j.py
src/backend/graph_service/utils/: __init__.py  graph_algorithms.py  visualization.py
src/backend/kubernetes/: api-gateway-deployment.yaml  auth-service-deployment.yaml  configmap.yaml  data-processor-deployment.yaml  graph-service-deployment.yaml  ingress.yaml  neo4j-statefulset.yaml  postgres-statefulset.yaml  redis-statefulset.yaml  secrets.yaml
src/backend/openapi/: api_gateway.yaml  auth_service.yaml  data_processor.yaml  graph_service.yaml
src/backend/scripts/: __init__.py  db_init.py  db_migrate.py  lint.sh  run_tests.sh  seed_data.py  setup_dev.sh
src/backend/shared/: __init__.py
src/backend/shared/config/: __init__.py  settings.py
src/backend/shared/database/: __init__.py  neo4j.py  postgres.py  redis.py
src/backend/shared/logging/: __init__.py  config.py  handlers.py
src/backend/shared/middleware/: __init__.py  error_handler.py  request_id.py
src/backend/shared/schemas/: __init__.py  base.py  error.py
src/backend/shared/utils/: __init__.py  cache.py  security.py  validation.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/api_gateway/: __init__.py  test_routes.py
src/backend/tests/auth_service/: __init__.py  test_jwt.py  test_oauth.py
src/backend/tests/data_processor/: __init__.py  test_getty.py  test_wikidata.py
src/backend/tests/graph_service/: __init__.py  test_graph_generator.py  test_neo4j.py
src/backend/tests/shared/: __init__.py  test_cache.py  test_security.py
(+260 files in other folders)
